# dreamlmm

./: BENCHMARK_FORMAT.md  LICENSE  Makefile  README.md  agentic_sleep_paper_draft.md  agentic_sleep_paper_draft.tex  latexmkrc  pyproject.toml  references.bib
agentic_sleep/: __init__.py  benchmarks.py  cli.py  consolidation.py  dream.py  engine.py  entropy.py  experiment.py  langgraph_adapter.py  memory.py  models.py  paper_tables.py  policy.py
examples/: benchmark_minimal.json
scripts/: build_paper.sh  check_latex_env.sh
